# evaluation_wowbaggers_vision_system

./: README.md
tedusar_detect_evaluation/: .directory  CMakeLists.txt  CMakeLists_tmp.txt  CTestTestfile.cmake  Makefile  package.xml
tedusar_detect_evaluation/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh  tedusar_detect_evaluation-msg-extras.cmake.develspace.in
tedusar_detect_evaluation/catkin_generated/installspace/: tedusar_detect_evaluation-msg-extras.cmake  tedusar_detect_evaluation-msg-paths.cmake  tedusar_detect_evaluation.pc  tedusar_detect_evaluationConfig.cmake
tedusar_detect_evaluation/cmake/: tedusar_detect_evaluation-genmsg-context.py  tedusar_detect_evaluation-genmsg.cmake
tedusar_detect_evaluation/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
tedusar_detect_evaluation/devel/share/tedusar_detect_evaluation/cmake/: tedusar_detect_evaluation-msg-paths.cmake  tedusar_detect_evaluationConfig.cmake
tedusar_detect_evaluation/gtest/: CTestTestfile.cmake  Makefile
tedusar_detect_evaluation/include/tedusar_detect_evaluation/: abstract_choice.h  detector_choice.h  image_publisher.h  learning_choice.h  my_exception.h  overlapping_rect.h  roc_choice.h
tedusar_detect_evaluation/launch/: evaluate_cnn_prediction.launch  evaluate_harcascade.launch  evaluate_hog.launch  image_publisher.launch  overlapping_rect.launch  roc_choice.launch  start_cnn_predict.launch
tedusar_detect_evaluation/msg/: RectImage.msg  RectImage2.msg
tedusar_detect_evaluation/src/: .directory  abstract_choice.cpp  cnn_choice.cpp  detector_choice.cpp  image_publisher.cpp  learning_choice.cpp  my_exception.cpp  overlapping_rect.cpp  roc_choice.cpp
tedusar_detect_evaluation/test/: utest.cpp
